# EE_IESaveEditor

./: .gitignore  BALDUR.gam  CMakeLists.txt  README.md
.github/workflows/: main.yaml
resources/: resource.qrc
resources/css/: style.qss
src/: aliases.h  biff_files.cpp  biff_files.h  binary_layouts.h  cre_file.cpp  cre_file.h  eff_files.h  exceptions.h  gam_file.cpp  gam_file.h  helper_structs.h  ie_files.h  key_file.cpp  key_file.h  main.cpp  offsets.h  tlk_file.cpp  tlk_file.h  xref.h
src/backend/: aliases.h  biff_file.cpp  biff_file.h  biff_files.cpp  biff_files.h  binary_layouts.h  cre_file.cpp  cre_file.h  gam_file.cpp  gam_file.h  helper_structs.h  ie_files.h  key_file.cpp  key_file.h  tlk_file.cpp  tlk_file.h
src/backend/binary_layouts/: cre.h  gam.h  key_biff.h  tlk.h
src/backend/utils/: errors.cpp  errors.h  helper_structs.h  io.h
src/frontend/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: biff_file_tests.cpp  gam_file_tests.cpp  key_file_tests.cpp  string_tests.cpp  tlk_file_tests.cpp
tests/res/: 25ArMisc.bif  Spells.bif
tests/utils/: tests_helper.cpp  tests_helper.h
